--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+census==0.8.15
 certifi==2020.6.20
 cffi==1.14.3
+chardet==3.0.4
 cycler==0.10.0
 enum34==1.1.10
+future==0.18.2
 h5py==2.10.0
+idna==2.10
 joblib==0.17.0
 Keras==2.2.4
 Keras-Applications==1.0.8
@@ -19,9 +23,11 @@ pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
+requests==2.24.0
 scikit-learn==0.23.2
 scipy==1.5.3
 seaborn==0.11.0
 six==1.15.0
 sklearn==0.0
 threadpoolctl==2.1.0
+urllib3==1.25.11
