--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ census==0.8.15
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
+click==7.1.2
+cpi==0.1.16
 cycler==0.10.0
 enum34==1.1.10
 future==0.18.2
