--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.hdf5 filter=lfs diff=lfs merge=lfs -text
 data/*.csv filter=lfs diff=lfs merge=lfs -text
 data/*.json filter=lfs diff=lfs merge=lfs -text
+*.geojson filter=lfs diff=lfs merge=lfs -text
