--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel visualization/index.html --out-dir visualization/dist",
-    "build": "parcel build visualization/index.html --out-dir visualization/dist"
+    "build": "parcel build visualization/index.html --out-dir visualization/dist",
+    "deploy": "gh-pages --dist visualization/dist"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "gh-pages": "^3.1.0",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^2.1.2"
   },
   "dependencies": {
     "mapbox-gl": "^1.12.0"
