--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel visualization/index.html --out-dir visualization/dist --public-url /dataopen2020",
-    "build": "parcel build visualization/index.html --out-dir visualization/dist --public-url /dataopen2020",
+    "dev": "parcel visualization/index.html --out-dir visualization/dist --public-url /dataopen-f20",
+    "build": "parcel build visualization/index.html --out-dir visualization/dist --public-url /dataopen-f20",
     "deploy": "gh-pages --dist visualization/dist"
   },
   "devDependencies": {
